[package]
name = "wish_115"
version = "1.0.0"
edition = "2021"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = 'abort'
strip = true      # 删除调试信息以减小文件大小

[dependencies]
reqwest = { version = "0.12.9", features = ["json", "cookies", "gzip", "brotli", "deflate"] } # HTTP 客户端，核心功能需要
anyhow = "1.0.94"  # 错误处理
tokio = { version = "1.42.0", features = ["rt", "rt-multi-thread", "macros"] }  # 异步运行时，必需
serde_json = "1.0.133" # JSON 处理
serde = { version = "1.0.216", features = ["derive"] }  # 序列化/反序列化
chrono = "0.4.39" # 时间处理，日志中使用
serde_yaml = "0.9" # YAML 配置文件处理
config = "0.15.4" # 配置文件处理
log4rs = "1.3.0" # 日志系统
log = "0.4.22"  # 日志接口
